Fix 'Will-change memory consumption is too high' error

--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,11 @@ select option {
     width: 100%;
 }
 
+/* Fix "Will-change memory consumption is too high" error (https://github.com/Leaflet/Leaflet/issues/4686) */
+.leaflet-fade-anim .leaflet-tile,.leaflet-zoom-anim .leaflet-zoom-animated {
+    will-change: auto !important;
+}
+
 .leaflet-popup-content-wrapper {
     background-color: var(--colour-green);
 }
